fix <ns-card> spacing

--- a/ui/src/styles/core/helpers.scss
+++ b/ui/src/styles/core/helpers.scss
@@ -23,6 +23,10 @@
   font-feature-settings: "trum";
 }
 
+.hidden {
+  display: none;
+}
+
 .clickable {
   cursor: pointer;
   &:hover {
